[+] Les fichiers de parametres des plugins sont désormais stockés dans le dossier de configuration de PluXml
[+] Administration: Paramètres > Plugins -> Ordre de chargement des plugins
[+] Administration: Paramètres > Configuration avancée -> Ajout du choix de l'emplacement des fichiers de configuration (dossier)
[+] Amélioration de la traduction en allemand (contribution Jürgen K.)
[-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
BUG plxShow:pagination(): lien "première page" collé au lien "précédente"
BUG plxPlugins::getInfos(): mauvais test sur la récupération du site
BUG sitemap: mauvais format de date dans la balise lastmod
BUG plxShow::catName() : appel de la fonction carUrl au lieu de catUrl
BUG plxUtils::makeThumb() : problème si largeur ou hauteur non renseignée
BUG plxUtils::strCut : problème pour couper une chaine de caractère avec l'encodage UTF-8
BUG Session perdue sous Chrome MacOSX
BUG Réécriture d'url: mauvaise gestion des paramètres (&)
BUG plxShow::artAuthorInfos() : erreur si l'auteur n'existe plus
Sécurité: Faille XSS possible sur la récupération de l'adresse ip d'un visiteur
Sécurité: Mauvais contrôle des tokens
Sécurité: Suppression du champ contenant la solution du captcha dans le formulaires des commentaires

## PLUXML 5.1.6 (sortie : 16/04/2012) ##

[+] Administration: Paramètres > Option d'affichage -> option pour afficher le nom des catégories même si elles ne contiennent pas d'article
[+] Administration: Page statiques > Options -> ajout champ pour définir le contenu de la balise <title>
[+] Administration: Catégories > Options -> ajout champ pour définir le contenu de la balise <title>
[+] Administration: affichage compteur des articles en attente de validation à droite du menu "Articles"
[+] Administration: compteur des commentaires hors ligne à droite du menu "commentaires" cliquable -> accès direct à la liste des commentaires hors ligne.